# capstone_design_2026

./: .gitignore  000001.npy  000001_metadata.jsonl  README.md  call_qwen_api.py  docker-compose.yml  local_call.py  pyproject.toml
DataBase/: init.sql  my.cnf
docker/: Dockerfile.api  Dockerfile.tts  docker-compose.yml
docs/: index.html
grpc-getting-started/: file_speech_handler.py  grpc_interfaces.py  grpc_requirements.txt  route_guide_client.py  route_guide_pb2.py  route_guide_pb2_grpc.py  route_guide_server.py  sample.json  server_communicate_connect.py  server_communicate_pb2.py  server_communicate_pb2.pyi  server_communicate_pb2_grpc.py  server_communicate_receiver.py  server_communicate_sender.py  server_communicate_server.py  use_e2v_text_data.py
grpc_getting_started/: dbobjects.py  file_speech_handler.py  grpc_requirements.txt  server_communicate_pb2.py  server_communicate_pb2.pyi  server_communicate_pb2_grpc.py  server_communicate_receiver.py  server_communicate_sender.py  server_communicate_server.py  use_e2v_text_data.py
notebooks/: AE.ipynb  PCA.ipynb
preprocess_pipeline/: stt.py  (+4 more)
receiver/: README.md  main.py  pyproject.toml  receiver.py
receiver/receiver_src/: config.py  logger.py  receiver.py  speaker.py  user.py
receiver/receiver_src/grpc_getting_started/: dbobjects.py  file_speech_handler.py  server_communicate_connect.py  server_communicate_pb2.py  server_communicate_pb2.pyi  server_communicate_receiver.py  server_communicate_sender.py  server_communicate_server.py
sender/: README.md  actions.py  config.py  inference.py  main.py  pyproject.toml  sender.py
sender/sender_src/: recoder.py  sender.py  user.py
sender/sender_src/fsq_ae/: __main__.py
sender/sender_src/grpc_getting_started/: .env.example  __init__.py  dbobjects.py  file_speech_handler.py  server_communicate_pb2.py  server_communicate_pb2_grpc.py  server_communicate_receiver.py  server_communicate_sender.py
sender/sender_src/preprocess_pipeline/: __main__.py  config.py  pipeline.py
sender/sender_src/tone_core/: config.py  main.py  sender.py  types.py
(+99 files in other folders)
