[project]
name = "capstone-design-2026"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "ffmpeg>=1.4",
    "funasr>=1.3.1",
    "numpy>=2.4.4",
    "soundfile>=0.13.1",
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/preprocess_pipeline"]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
