[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capstone_receiver"
version = "0.1.0"

dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "requests>=2.33.1",
    "uvicorn>=0.47.0",
]

# src 폴더 아래에 있는 패키지들을 찾으라고 알려줍니다.
[tool.setuptools.packages.find]
where = ["receiver_src"]
